--- a/index.html
+++ b/index.html
@@ -4,12 +4,132 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>ФЕЯ ЧИСТОТЫ</h1>
-    <h1>Информация о нашей клининговой компании</h1>
-    <h2>Кто мы?</h2>
-    
+    <header>
+        <div class="logo1">
+            <a href="/">
+                <img src="assets/photo/logo2.png" alt="#" width="98px" height="98px">
+            </a>
+        </div>
+        <ul class="menu">
+                <li><a href="/">Работники</a></li>
+                <li><a href="/">Услуги</a></li>
+                <li><a href="/">Галерея</a></li>
+                <li><a href="/">Контакты</a></li>
+        </ul>
+        <div class="tel">
+            <img src="assets/photo/number.png" alt="#" class="number" width="30px" height="30px">
+            <a href="tel:89224202540">+7 922 420-25-40</a>
+        </div>
+    </header>
+    <section class="first">
+        <div class="wrapper1">
+            <div class="text1">
+                <span class="text1-1">Нужна уборка в квартире, доме или офисе?</span><br><br><br>
+                <span class="text1-2">Наши опытные уборщицы всегда готовы вам помочь.
+                    Больше не надо переживать за потраченное время ради чистоты:
+                    мы можем это сделать за вас быстрее, качественнее и лучше!</span>
+            </div>
+        </div>
+    </section>
+    <div style="border-bottom: solid 5px #000000;"></div>
+    <section class="second">
+        <div class="wrapper2">
+            <div class="plus">
+                <div class="plusL">
+                    <img class="img" src="assets/photo/plus1.png" alt="#">
+                    <div class="plusText">
+                        <b><span class="tp1">Ежедневно</span><br></b>
+                        <span class="tp11">Помогаем с 8:00 - 20:00</span>
+                    </div>
+                </div>
+                <div class="plusR">
+                    <img class="img" src="assets/photo/plus2.png" alt="#">
+                    <div class="plusText">
+                        <b><span class="tp2">Гарантия</span><br></b>
+                        <span class="tp21">Работаем по договору</span>
+                    </div>
+                </div>
+                <div class="plusL">
+                    <img class="img" src="assets/photo/plus3.png" alt="#">
+                    <div class="plusText">
+                        <b><span class="tp3">Безопасно</span><br></b>
+                        <span class="tp31">Используем проверенные средства</span>
+                    </div>
+                </div>
+                <div class="plusR">
+                    <img class="img" src="assets/photo/plus4.png" alt="#">
+                    <div class="plusText">
+                        <b><span class="tp4">Без риска</span><br></b>
+                        <span class="tp41">Проверяем всех сотрудников</span>
+                    </div>
+                </div>
+                <div class="plusL">
+                    <img class="img" src="assets/photo/plus5.png" alt="#">
+                    <div class="plusText">
+                        <b><span class="tp5">Доверие</span><br></b>
+                        <span class="tp42">Находимся на рынке 15 лет</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div style="border-bottom: solid 5px #000000;"></div>
+    <!-- <section class="third">
+        <div class="wrapper3">
+            <div class="forma">
+                <b><span class="online">Онлайн заявка</span></b>
+                <form id="contact" action="#" method="post" name="contact">
+                    <input id="name" class="txt" name="name" type="name" placeholder="Ваше имя">
+                    <input id="phone" class="txt" name="phone" type="phone" placeholder="Ваш телефон"> 
+                    <input id="adress" class="txt" name="adress" type="adress" placeholder="Ваш адрес">
+                    <textarea id="msg" class="txtarea" name="msg" placeholder="Ваше сообщение:"></textarea>
+                    <button id="send">Отправить</button>
+                </form>
+            </div>
+        </div>
+        <div class="images">
+            <img src="assets/photo//womenhand.png" alt="#">
+        </div>
+    </section> -->
+    <section class="third">
+        <div class="div1">
+            <div class="forma">
+                <b><span class="online">Онлайн заявка</span></b>
+                <form id="contact" action="#" method="post" name="contact">
+                    <div class="part1"><input id="name" class="txt" name="name" type="name" placeholder="Ваше имя">
+                    <input id="phone" class="txt" name="phone" type="phone" placeholder="Ваш телефон"> 
+                    <input id="adress" class="txt" name="adress" type="adress" placeholder="Ваш адрес"></div>
+                    <div class="part2"><textarea id="msg" class="txtarea" name="msg" placeholder="Ваше сообщение:"></textarea></div>
+                    <button id="send">Отправить</button>
+                </form>
+            </div>
+        </div>
+        <div class="div2">
+            <img class="images" src="assets/photo//womenhand.png" alt="#">
+        </div>
+    </section>
+    <footer>
+        <div class="social">
+            <a href="http://vk.com" title="Группа в ВК" target="_blank">
+                <img class="sites" src="assets/photo/vk.png" alt="#">
+            </a>
+            <a href="http://facebook.com" target="_blank">
+                <img class="sites" src="assets/photo/facebook.png" alt="#">
+            </a>
+            <a href="http://twitter.com" target="_blank">
+                <img class="sites" src="assets/photo/instagram.png" alt="#">
+            </a>
+        </div>
+        <div class="name">
+            Чистая фея
+        </div>
+        <div class="rights">
+            Все права защищены &copy; 2023
+        </div>
+    </footer>
 </body>
 </html>
