fix problems with adaptation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="logo1">
+        <div class="logo">
             <a href="/">
                 <img src="assets/photo/logo2.png" alt="#" width="98px" height="98px">
             </a>
